refactor outbox pattern