@@ -7,6 +7,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.ourcode.model.dto.OutBoxDto;
 import org.ourcode.service.kafka.consumer.CdcEventConsumer;
 import org.ourcode.service.kafka.producer.DeviceIdProducer;
 import org.ourcode.service.outbox.OutBoxService;
@@ -29,39 +30,31 @@ class CdcEventConsumerTest {
     @InjectMocks
     private CdcEventConsumer cdcEventConsumer;
 
-    private final ObjectMapper objectMapper = new ObjectMapper();
-
     @Test
-    void testHandleCdcEvents() throws Exception {
-        // Arrange
+    void testHandleCdcEvents() {
         String cdcMessage = "{\"after\": {\"eventid\": \"event-1\", \"deviceid\": \"device-1\", \"timestamp\": 123456789, \"type\": \"temperature\", \"payload\": \"{}\", \"is_processed\": false}}";
 
-        List<ConsumerRecord<String, String>> records = Arrays.asList(
+        List<ConsumerRecord<String, String>> records = List.of(
                 new ConsumerRecord<>("ourcode.public.outbox_events", 0, 0, "key", cdcMessage)
         );
 
-        // Act
         cdcEventConsumer.handleCdcEvents(records);
 
-        // Assert
-        verify(outBoxService, times(1)).markAsProcessed(anyString());
-        verify(deviceIdProducer, times(1)).sendProcessedDeviceIds();
+        verify(outBoxService, times(1)).markAsProcessed(anyList());
+        verify(deviceIdProducer, times(1)).sendProcessedDeviceIds(anyList());
     }
 
     @Test
-    void testHandleCdcEventsWithNullAfter() throws Exception {
-        // Arrange
+    void testHandleCdcEventsWithNullAfter() {
         String cdcMessage = "{\"after\": null}";
 
         List<ConsumerRecord<String, String>> records = Arrays.asList(
                 new ConsumerRecord<>("ourcode.public.outbox_events", 0, 0, "key", cdcMessage)
         );
 
-        // Act
         cdcEventConsumer.handleCdcEvents(records);
 
-        // Assert
-        verify(outBoxService, never()).markAsProcessed(anyString());
-        verify(deviceIdProducer, times(1)).sendProcessedDeviceIds();
+        verify(outBoxService, never()).markAsProcessed(any());
+        verify(deviceIdProducer, never()).sendProcessedDeviceIds(anyList());
     }
 }
